# morning-brief

./: .gitignore  .prsop.yml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
morning_brief/: __init__.py  __main__.py  auth.py  classify.py  cli.py  digest.py  labels.py  notify.py  state.py  suggest.py
tests/: test_classify.py  test_cli.py  test_digest.py  test_labels.py  test_suggest.py
